- 3466445: Upgrade Apache POI to 3.8	
- 3422180: Upgrade to ZK 5.0.10
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.4

New features:
- 3482284: LimitInputStream should be buffered
- 3477836: A separated error log for the parser	
- 3469777: Scored snippets

Bug fixes:
- 3482151: Monitor API response gives error
- 3479649: SetField and DeleteField API don't update config.xml
- 3479548: Report log files are truncated
- 3476578: UTF-8 character as separator in snippet field
- 3475446: head indexed instead of body (using <script /> in head)
- 3476551: Query with Quotation Marks has unusual results	
- 3472905: Error while crawling local HTML file
- 3471749: Out Of Memory Error while indexing PDF document

OpenSearchServer 1.2.3

New features:
- 3396935: Log files viewable in the user interface
- 3393751: XML load sheduler task
- 3393063: Upgrade to SeleniumHQ 2.0.4
- 3393052: Upgrade to NekoHTML 1.9.15
- 3393047: Upgrade to TagSoup 1.2.1
- 3393046: Upgrade to PDFBox 1.6.x
- 3393032: Frameset support
- 3392359: Drupal module for OpenSearchServer
- 3380911: Scheduler informations in home view	
- 3370376: Parser have editable parameters
- 3366055: URLBrowser API
- 3353874: OSS could be a great sitemap generator
- 3356222: Export the search result into csv file
- 3344564: Adding Snippet Field Size and Tag from the API
- 3310490: File Crawler API
- 3310489: Web Crawler API
- 2958005: Upgrade Apache HttpClient library to 4.1.1

Bug fixes:
- 3426912: Authorization error when loading binary with XML Load
- 3409814: Error: The document is really a RTF file
- 3408193: Password of the XMLLoad task is not encrypted
- 3406657	File crawler error: unknown protocol: smb
- 3406378: SQLite supports only TRANSACTION_SERIALIZABLE
- 3396778: Word 95 or older format are not indexed	
- 3386593: LimitException when reading Robots.txt	
- 3380949: NPE in Renderer